feet: 로또 당첨 통계를 저장하고 출력하는 기능