@@ -2,7 +2,8 @@ package lotto.model;
 
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+
+import static lotto.model.LottoPrize.*;
 
 public class Lotto {
     private final List<Integer> numbers;
@@ -18,12 +19,40 @@ public class Lotto {
         }
     }
 
-    public void checkPrize(Integer bonusNumber, List<List<Integer>> lottoNumber) {
+    public void checkSame(Integer bonusNumber, List<List<Integer>> lottoNumber) {
         for (List<Integer> integers : lottoNumber) {
             List<Integer> ResultList = integers.stream()
                     .filter(i -> this.numbers.stream().anyMatch(Predicate.isEqual(i)))
-                    .collect(Collectors.toList());
-            System.out.println(ResultList);
+//                    .collect(Collectors.toList());
+                    .toList();
+            long bonusResult = integers.stream()
+                            .filter(bonusNumber::equals).count();
+//            System.out.println(bonusResult);
+
+            CheckPrize(ResultList.size(),bonusResult).addWinCount();
+
         }
+    }
+
+    public LottoPrize CheckPrize(int result, long bonusResult){
+        if(result==6){
+            return FIRST_PRIZE;
+        }
+        if(result==5&&bonusResult==1){
+            return SECOND_PRIZE;
+        }
+        if(result==5&&bonusResult==0){
+            return THIRD_PRIZE;
+        }
+        if(result==4){
+            return FOURTH_PRIZE;
+        }
+        if(result==3){
+            return FIFTH_PRIZE;
+        }
+        if(result<3){
+            return LOOSE;
+        }
+        throw new IllegalArgumentException("존재 하지 않는 순위입니다.");
     }
 }
